--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,8 @@
 <form id="formulario">
-    <input type="text" name="cuenta" pattern="[012345678]{7}" maxlength="7" minlength="7" required>
+    <input type="text" name="cuenta" pattern="[0123456789]{7}" maxlength="7" minlength="7" required>
     <input type="submit" value="registrar">
 </form>
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<div id="message"></div>
+<canvas id="qr"></canvas>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/comunicaciones/index.js"></script>
