qr it's working

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -3,6 +3,6 @@
     <input type="submit" value="registrar">
 </form>
 <div id="message"></div>
-<canvas id="qr"></canvas>
+<img id="qr"></img>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/comunicaciones/index.js"></script>
