--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -71,7 +71,7 @@ h1 {
 
 h2 {
 	color: #333;
-	font: 700 2.125rem/2.75rem "Open Sans", sans-serif;
+	font: 10 2.125rem/2.75rem "Open Sans", sans-serif;
 }
 
 h3 {
@@ -1451,7 +1451,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #333 url("../images/up-arrow.png") no-repeat center 47%;
+	background:  linear-gradient(45deg, #9e8f4e, #4e7057 url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
@@ -2202,3 +2202,4 @@ a:hover.back-to-top {
 	/* end of extra pages */
 }
 /* end of min-width 1200px */
+
